--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,83 +1,114 @@
 name: CI
 
 'on':
-    schedule:
-      - cron: '30 5 * * 1'  # Every Monday at 5:30
-    pull_request:
-    push:
-        branches:
-          - develop
+  pull_request:
+  push:
+    branches:
+      - trunk
 
 env:
-    UBSAN_OPTIONS: print_stacktrace=1
+  UBSAN_OPTIONS: print_stacktrace=1
 
 jobs:
-    posix:
-        strategy:
-            fail-fast: false
-            matrix:
-                include:
-                  - os: ubuntu-20.04
-                    make: test-debug
-                    info: g++-9 + test-debug
+  posix:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-22.04
+            type: Debug
+            title: debug clang-15
+            compiler: clang
+            version: 15
 
-                  - os: ubuntu-20.04
-                    make: test-release
-                    info: g++-9 + test-release
+          - os: ubuntu-22.04
+            type: Debug
+            title: debug clang-16
+            compiler: clang
+            version: 16
 
-        name: '${{matrix.os}}: ${{matrix.info}}'
-        runs-on: ${{matrix.os}}
+          - os: ubuntu-22.04
+            type: Debug
+            title: debug clang-17
+            compiler: clang
+            version: 17
 
-        steps:
-          - uses: actions/checkout@v4
-            with:
-                submodules: true
+          - os: ubuntu-22.04
+            type: Debug
+            title: debug gcc-11
+            compiler: gcc
+            version: 11
 
-          - name: Reuse ccache directory
-            uses: actions/cache@v4
-            with:
-                path: ~/.ccache
-                key: '${{matrix.os}} ${{matrix.info}} ccache-dir ${{github.ref}} run-${{github.run_number}}'
-                restore-keys: |
-                    ${{matrix.os}} ${{matrix.info}} ccache-dir ${{github.ref}} run-'
-                    ${{matrix.os}} ${{matrix.info}} ccache-
+          - os: ubuntu-22.04
+            type: Debug
+            title: debug gcc-12
+            compiler: gcc
+            version: 12
 
-          - name: Install packages
-            run: |
-                (cd third_party && git clone -b develop --single-branch --depth 1 https://github.com/userver-framework/userver.git)
-                sudo apt update
-                sudo apt install --allow-downgrades -y postgresql $(cat third_party/userver/scripts/docs/en/deps/${{matrix.os}}.md | tr '\n' ' ')
-                python3 -m pip install -r requirements.txt
+    name: '${{matrix.os}}: ${{matrix.title}}'
+    runs-on: ${{matrix.os}}
 
-          - name: Setup ccache
-            run: |
-                ccache -M 2.0GB
-                ccache -s
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Reuse ccache directory
+        uses: actions/cache@v2
+        with:
+          path: ~/.ccache
+          key: '${{matrix.os}} ${{matrix.title}} ccache-dir ${{github.ref}} run-${{github.run_number}}'
+          restore-keys: |
+            ${{matrix.os}} ${{matrix.title}} ccache-dir ${{github.ref}} run-'
+            ${{matrix.os}} ${{matrix.title}} ccache-
+      - name: install based dependencies
+        run: |
+          sudo apt install cmake
+          sudo apt install ninja-build
+          sudo apt install ccache
+          sudo make install-compiler compiler=${{matrix.compiler}} version=${{matrix.version}}
+      - name: add Postgres package repository
+        run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
+      - name: Setup ccache
+        run: |
+          ccache -M 2.0GB
+          ccache -s
+      - name: Fetch userver
+        continue-on-error: true
+        run: >
+          cmake 
+          -B cmake_build 
+          -G Ninja
+          -DCMAKE_BUILD_TYPE=${{matrix.type}} 
+          -DCMAKE_C_COMPILER=$(make find-c-compiler compiler=${{matrix.compiler}} version=${{matrix.version}})
+          -DCMAKE_CXX_COMPILER=$(make find-cxx-compiler compiler=${{matrix.compiler}} version=${{matrix.version}})
+      - name: Install packages
+        run: |
+          sudo apt update
+          sudo apt install --allow-downgrades -y pep8 $(cat cmake_build/_deps/userver-src/scripts/docs/en/deps/${{matrix.os}}.md | tr '\n' ' ')
+      - name: Drom cmake build folder
+        run: |
+          rm -rf cmake_build
+      - name: Configure cmake project
+        run: >
+          cmake 
+          -B cmake_build 
+          -G Ninja
+          -DCMAKE_BUILD_TYPE=${{matrix.type}} 
+          -DCMAKE_C_COMPILER=$(make find-c-compiler compiler=${{matrix.compiler}} version=${{matrix.version}})
+          -DCMAKE_CXX_COMPILER=$(make find-cxx-compiler compiler=${{matrix.compiler}} version=${{matrix.version}})
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
 
-          - name: Run ${{matrix.make}}
-            run: |
-                make ${{matrix.make}}
+      - name: Build project
+        run: >
+          cmake 
+          --build cmake_build
+          --target all
 
-          - name: Test install ${{matrix.make}}
-            if: matrix.make == 'test-release'
-            run: |
-                make dist-clean
-                make install PREFIX=`pwd`/local_installation/
-
-          - name: Test run after install
-            if: matrix.make == 'test-release'
-            run: >-
-                ./local_installation/bin/pg_service_template
-                --config=./local_installation/etc/pg_service_template/static_config.yaml
-                --config_vars=./local_installation/etc/pg_service_template/config_vars.yaml
-                &
-
-          - name: Check work run service
-            if: matrix.make == 'test-release'
-            run: |
-                ps aux | grep pg_service_template | grep config && curl http://localhost:8080/ping -v
-
-          - name: Stop all
-            if: matrix.make == 'test-release'
-            run: |
-                killall pg_service_template
+      - name: Run tests
+        run: | 
+          cd cmake_build
+          (test -t 1 && GTEST_COLOR=1 PYTEST_ADDOPTS="--color=yes" ctest -V) || ctest -V
