--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(USERVER_FEATURE_POSTGRESQL ON CACHE BOOL "" FORCE)
 set(USERVER_FEATURE_CRYPTOPP_BLAKE2 OFF CACHE BOOL "" FORCE)
 set(USERVER_FEATURE_GRPC_CHANNELZ OFF CACHE BOOL "" FORCE)
 set(USERVER_FEATURE_REDIS_HI_MALLOC ON CACHE BOOL "" FORCE)
+SET(USERVER_FEATURE_PATCH_LIBPQ OFF CACHE BOOL "" FORCE)
 include(FetchContent)
 FetchContent_Declare(
         userver
